--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -2,6 +2,8 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic);
 
+body {height:100%}
+
 html, body {
     margin: 0;
     padding: 0;
