--- a/src/Pelagos/Bundle/AppBundle/Resources/views/layout.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/layout.html.twig
@@ -61,7 +61,12 @@
                     <div class="region region-header">
                         <div id="block-pelagos-pelagos-login-logout-links" class="block block-pelagos">
                             <div class="content">
-                                <a href="/user/login?destination=">Log In</a>  </div>
+                            {% if is_granted('ROLE_USER') %}
+                            <a href="{{ path('security_logout') }}">Logout</a>
+                                {% else %}
+                            <a href="{{ path('security_login') }}">Login</a>
+                            {% endif %}
+                            </div>
                         </div>
                     </div>
 
