--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/login.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/login.css
@@ -1,3 +1,13 @@
+#pelagos-wrapper {
+    display: table;
+    width: 100%;
+    height: 100%;
+    background-color: #ebebeb;
+    margin-left:auto;
+    margin-right:auto;
+    width:50%;
+}
+
 #page #login {
         float:left;
         margin:0 -296px 0 0;
