--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSummary/dataset-summary.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSummary/dataset-summary.html.twig
@@ -1,6 +1,8 @@
-{% extends "PelagosAppBundle::layout.html.twig" %}
+{% extends "PelagosAppBundle:template:UI.html.twig" %}
 
 {% block head %}
+    {{ parent() }}
+    
     {% javascripts
         '@PelagosAppBundle/Resources/public/js/dataset-summary.js'
         '@FOSJsRoutingBundle/Resources/public/js/router.js'
