--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/People.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/People.html.twig
@@ -1,6 +1,8 @@
-{% extends "PelagosAppBundle::layout.html.twig" %}
+{% extends "PelagosAppBundle:template:UI.html.twig" %}
 
 {% block head %}
+    {{ parent() }}
+
     {{
         add_library (
             [
