--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Stats/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Stats/index.html.twig
@@ -1,6 +1,8 @@
-{% extends "PelagosAppBundle::layout.html.twig" %}
+{% extends "PelagosAppBundle:template:UI.html.twig" %}
 
 {% block head %}
+    {{ parent() }}
+    
     {% stylesheets  '@PelagosAppBundle/Resources/public/css/stats.css' %}
         {{ add_css(asset_url) }}
     {% endstylesheets  %}
