Change style, moved style to css

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Security/login.html.twig
@@ -16,7 +16,7 @@
             {{ error.messageKey|trans(error.messageData, 'security') }}
         </div>
     {% endif %}
-    <div id="main-wrapper" style="margin-left:auto;margin-right:auto;width:50%;">
+    <div id="main-wrapper">
         <div id="main" class="clearfix">
             <!-- CONTENT -->
             <div class="row">
