--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
@@ -83,16 +83,16 @@
                 <label>UDI:</label>
                 <input name="udi" size="100">
                 <button id="get-versions-button" type="button">Get UDI</button>
-                <button id="show-diff-button" type="button">Show Differences</button>
+                <button id="show-diff-button" type="button">Show Differences On/Off</button>
             </span>
         </td>
         <td width="25%">
             <label>Number of Versions:</label>
-            <div id="numversions">
+            <div id="numversions"></div>
         </td>
         <td width="25%">
             <label>Dataset State:</label>
-            <div id="datasetstatus">
+            <div id="datasetstatus"></div>
         </td>
     </tr>
 </table>
