Submit button should be called LOGIN

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Security/login.html.twig
@@ -58,7 +58,7 @@
                     </div>
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                     <div class="row btn-row">
-                    <input class="btn-submit form-submit" id="edit-submit" name="op" accesskey="l" type="submit">
+                    <input class="btn-submit form-submit" id="edit-submit" name="op" value="LOGIN" accesskey="l" type="submit">
                     <input class="btn-reset" name="reset" accesskey="c" value="CLEAR" type="reset">
                     </div>
                 </form>
