--- a/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/linkList.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/linkList.html.twig
@@ -1,13 +1,7 @@
+{% extends "PelagosAppBundle:template:UI.html.twig" %}
+
 {% block head %}
-    {{
-        add_library (
-            [
-                'ui.dialog',
-                'ui.tooltip',
-                'ui.button'
-            ]
-        )
-    }}
+    {{ parent() }}
 
     {{
         add_css (
