--- a/src/Pelagos/Bundle/AppBundle/Resources/views/EndReview/default.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/EndReview/default.html.twig
@@ -1,13 +1,7 @@
 {% extends "PelagosAppBundle:template:UI.html.twig" %}
 
 {% block head %}
-    {{
-        add_library (
-            [
-                'ui.dialog'
-            ]
-        )
-    }}
+    {{ parent() }}
 
     {{
         add_js(
