--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -1,5 +1,7 @@
 {% extends "PelagosAppBundle:template:UI.html.twig" %}
-
+{% block title %}
+    Dataset Submission {{ ' | ' ~ datasetSubmission.dataset.udi | default }}
+{% endblock %}
 {% block head %}
     {{ parent() }}
 
