--- a/src/Pelagos/Bundle/AppBundle/Resources/views/layout.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/layout.html.twig
@@ -2,7 +2,7 @@
 <html style="height:100%;">
 <head>
 {% block head %}
-    <title>{% block title %}{% endblock %}</title>
+    <title>GRIIDC | {% block title %}Pelagos{% endblock %}</title>
 
     {%block stylesheets %}
         <link href="{{ asset('/build/common.css') }}" rel="stylesheet" />
