--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/DatasetRestrictions.html.twig
@@ -1,5 +1,5 @@
 {% extends "PelagosAppBundle:template:UI.html.twig" %}
-
+{% block title %}Dataset Restrictions{% endblock %}
 {% block head %}
     {{ parent() }}
 
