--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Stats/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Stats/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "PelagosAppBundle:template:UI.html.twig" %}
-
+{% block title %}System Statistics{% endblock %}
 {% block head %}
     {{ parent() }}
     
