fix text and box css

--- a/assets/css/pelagos-module.css
+++ b/assets/css/pelagos-module.css
@@ -79,3 +79,11 @@
 .ui-front {
     z-index: 1000;
 }
+
+.element-invisible {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px, 1px, 1px, 1px);
+    overflow: hidden;
+    height: 1px;
+}
