--- a/src/Pelagos/Bundle/AppBundle/Resources/views/layout.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/layout.html.twig
@@ -4,6 +4,8 @@
 {% block head %}
     <title>GRIIDC | {% block title %}Pelagos{% endblock %}</title>
 
+    <link rel="icon" type="image/x-icon" href="{{ asset('/build/images/griidc_fav.png') }}" />
+
     {%block stylesheets %}
         <link href="{{ asset('/build/common.css') }}" rel="stylesheet" />
     {%endblock stylesheets  %}
