Added default keyword to twig template of metadata generator

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_DataIdentification.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_DataIdentification.xml.twig
@@ -91,16 +91,16 @@
                 <gmd:geographicElement>
                     <gmd:EX_GeographicBoundingBox>
                         <gmd:westBoundLongitude>
-                            <gco:Decimal>{{ boundingBoxArray.westBoundLongitude }}</gco:Decimal>
+                            <gco:Decimal>{{ boundingBoxArray.westBoundLongitude | default }}</gco:Decimal>
                         </gmd:westBoundLongitude>
                         <gmd:eastBoundLongitude>
-                            <gco:Decimal>{{ boundingBoxArray.eastBoundLongitude }}</gco:Decimal>
+                            <gco:Decimal>{{ boundingBoxArray.eastBoundLongitude | default}}</gco:Decimal>
                         </gmd:eastBoundLongitude>
                         <gmd:southBoundLatitude>
-                            <gco:Decimal>{{ boundingBoxArray.southBoundLatitude }}</gco:Decimal>
+                            <gco:Decimal>{{ boundingBoxArray.southBoundLatitude | default}}</gco:Decimal>
                         </gmd:southBoundLatitude>
                         <gmd:northBoundLatitude>
-                            <gco:Decimal>{{ boundingBoxArray.northBoundLatitude }}</gco:Decimal>
+                            <gco:Decimal>{{ boundingBoxArray.northBoundLatitude | default }}</gco:Decimal>
                         </gmd:northBoundLatitude>
                     </gmd:EX_GeographicBoundingBox>
                 </gmd:geographicElement>
