--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/index.html.twig
@@ -3,6 +3,14 @@
 {% block head %}
     {{ parent() }}
 
+    {{
+        add_css (
+            [
+                '//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/themes/default/style.min.css',
+            ]
+        )
+    }}
+
     {% stylesheets
         '@PelagosAppBundle/Resources/public/css/data-discovery.css'
         '@PelagosAppBundle/Resources/public/css/data-discovery-scrollbars.css'
@@ -17,6 +25,7 @@
     {{ 
         add_js(
             [
+                '//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/jstree.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js',
                 '//maps.google.com/maps/api/js?v=3&key=' ~ google_maps_api_key,
             ]
